force-app/main/default/objects/Case/fields/IDTransaction__c.field-meta.xml
<CustomField>
    <fullName>IDTransaction__c</fullName>
    <label>ID de la transaction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>