force-app/main/default/objects/Case/fields/LogoUGC__c.field-meta.xml
<CustomField>
    <fullName>LogoUGC__c</fullName>
    <description>Test</description>
    <formula>IMAGE(&quot;https://www.ugc.fr/dynamique/images/logo_ugc_blanc_2018.jpg&quot;,&quot;.png&quot;,50,75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo UGC</label>
    <type>Text</type>
</CustomField>