force-app/main/default/objects/Case/fields/ModeAnnulation__c.field-meta.xml
<CustomField>
    <fullName>ModeAnnulation__c</fullName>
    <label>Mode annulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatique</fullName>
            </value>
            <value>
                <fullName>Manuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>