force-app/main/default/objects/Case/fields/Mois_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Mois_de_la_demande__c</fullName>
    <formula>LEFT(TEXT(DateDemande__c) , 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois de la demande</label>
    <type>Text</type>
</CustomField>