force-app/main/default/objects/Case/fields/MontantOrigine__c.field-meta.xml
<CustomField>
    <fullName>MontantOrigine__c</fullName>
    <label>Montant d&#39;origine</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>