force-app/main/default/objects/Case/fields/MontantPanierResa__c.field-meta.xml
<CustomField>
    <fullName>MontantPanierResa__c</fullName>
    <label>Montant du panier de résa</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>