force-app/main/default/objects/Case/fields/MontantRemboursementCalc__c.field-meta.xml
<CustomField>
    <fullName>MontantRemboursementCalc__c</fullName>
    <description>Montant de remboursement calcule automatiquement pas le systeme</description>
    <label>Montant Remboursement Calc</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>