force-app/main/default/objects/Case/fields/MontantRembourser__c.field-meta.xml
<CustomField>
    <fullName>MontantRembourser__c</fullName>
    <inlineHelpText>Merci de remplir le montant avec une virgule et non un point</inlineHelpText>
    <label>Montant à rembourser</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>