force-app/main/default/objects/Case/fields/MontantRemise__c.field-meta.xml
<CustomField>
    <fullName>MontantRemise__c</fullName>
    <label>Montant remise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>