force-app/main/default/objects/Case/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <label>Motif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Famille__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>01- Info process abo</fullName>
            </value>
            <value>
                <fullName>02- Erreur prise abo</fullName>
            </value>
            <value>
                <fullName>03- Click and collect</fullName>
            </value>
            <value>
                <fullName>05- B2B</fullName>
            </value>
            <value>
                <fullName>06- VPC</fullName>
            </value>
            <value>
                <fullName>07- Creation Abonnement</fullName>
            </value>
            <value>
                <fullName>01- Reception carte</fullName>
                <label>01- Réception carte</label>
            </value>
            <value>
                <fullName>02- Reedition payante</fullName>
            </value>
            <value>
                <fullName>03- Reedition gratuite</fullName>
            </value>
            <value>
                <fullName>04- Desabonnement</fullName>
            </value>
            <value>
                <fullName>05- Resiliation</fullName>
            </value>
            <value>
                <fullName>06- Migration UI 1/2/3</fullName>
            </value>
            <value>
                <fullName>07- Reabonnement</fullName>
            </value>
            <value>
                <fullName>08- Retention</fullName>
            </value>
            <value>
                <fullName>09- Retour Carte</fullName>
            </value>
            <value>
                <fullName>10- Retractation</fullName>
            </value>
            <value>
                <fullName>11- Avertissement</fullName>
            </value>
            <value>
                <fullName>12- Annulation Migration</fullName>
            </value>
            <value>
                <fullName>13- Annulation Contrat</fullName>
            </value>
            <value>
                <fullName>04- Dematerialise</fullName>
                <label>04- Dématérialisé</label>
            </value>
            <value>
                <fullName>01- Inscription</fullName>
            </value>
            <value>
                <fullName>02- Solde de points</fullName>
            </value>
            <value>
                <fullName>03- Echange de points</fullName>
            </value>
            <value>
                <fullName>04- Fonctionnement Club</fullName>
            </value>
            <value>
                <fullName>01- Offres UGC</fullName>
            </value>
            <value>
                <fullName>02- Formules UGC+</fullName>
            </value>
            <value>
                <fullName>03- Solo</fullName>
            </value>
            <value>
                <fullName>04- Blue</fullName>
            </value>
            <value>
                <fullName>05- VLO</fullName>
            </value>
            <value>
                <fullName>01- Modalites de reservation</fullName>
                <label>01- Modalités de réservation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>