force-app/main/default/objects/Case/fields/Motif_d_avertissement__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_avertissement__c</fullName>
    <label>Motif d&#39;avertissement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraude</fullName>
            </value>
            <value>
                <fullName>Menace et / ou Violence envers le personnel UGC</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>