force-app/main/default/objects/Case/fields/Motif_de_R_siliation__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_R_siliation__c</fullName>
    <label>Motif de Résiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code X</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>M10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>