force-app/main/default/objects/Case/fields/Motif_de_r_siliation_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_r_siliation_Zuora__c</fullName>
    <formula>IF((ISPICKVAL(Motif_de_R_siliation__c, &#39;M3&#39;)), &#39;Code M&#39;,  IF((ISPICKVAL(Motif_de_R_siliation__c, &#39;M6&#39;)), &#39;Code M&#39;,  IF((ISPICKVAL(Motif_de_R_siliation__c, &#39;M10&#39;)), &#39;Code M&#39;,  IF((ISPICKVAL(Motif_de_R_siliation__c, &#39;Code X&#39;)), &#39;Code X&#39;, &#39;&#39;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motif de résiliation Zuora</label>
    <type>Text</type>
</CustomField>