force-app/main/default/objects/Case/fields/Motif_R_dition_de_Carte__c.field-meta.xml
<CustomField>
    <fullName>Motif_R_dition_de_Carte__c</fullName>
    <label>Motif Réédition de Carte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perdu</fullName>
            </value>
            <value>
                <fullName>Abimé</fullName>
            </value>
            <value>
                <fullName>Changement de photo</fullName>
            </value>
            <value>
                <fullName>Changement de nom</fullName>
            </value>
            <value>
                <fullName>Carte démagnétisée</fullName>
            </value>
            <value>
                <fullName>Photo illisible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>