force-app/main/default/objects/Case/fields/Moyen_de_paiement_souhait__c.field-meta.xml
<CustomField>
    <fullName>Moyen_de_paiement_souhait__c</fullName>
    <label>Moyen de paiement souhaité</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DemandeRemboursement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Chèque (VLO)</fullName>
            </value>
            <value>
                <fullName>CB (VLO)</fullName>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>Chèque (UI)</fullName>
            </value>
            <value>
                <fullName>CB (UI)</fullName>
            </value>
            <value>
                <fullName>Chèque (UU)</fullName>
            </value>
            <value>
                <fullName>CB (UU)</fullName>
            </value>
            <value>
                <fullName>Virement (UI)</fullName>
            </value>
            <value>
                <fullName>Bancontact (UU)</fullName>
            </value>
            <value>
                <fullName>Prélèvement (UI)</fullName>
            </value>
            <value>
                <fullName>Prélèvement (UU)</fullName>
            </value>
            <value>
                <fullName>Espèce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>