force-app/main/default/objects/Case/fields/NbAppelsEntrants__c.field-meta.xml
<CustomField>
    <fullName>NbAppelsEntrants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nb Appels Entrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>