force-app/main/default/objects/Case/fields/NbAppelsSortants__c.field-meta.xml
<CustomField>
    <fullName>NbAppelsSortants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nb Appels Sortants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>