force-app/main/default/objects/Case/fields/NbBilletsAnnules__c.field-meta.xml
<CustomField>
    <fullName>NbBilletsAnnules__c</fullName>
    <label>Nb billets annulés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>