force-app/main/default/objects/Case/fields/NbCourriersEntrants__c.field-meta.xml
<CustomField>
    <fullName>NbCourriersEntrants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nb Courriers Entrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>