force-app/main/default/objects/Case/fields/NbCourriersSortants__c.field-meta.xml
<CustomField>
    <fullName>NbCourriersSortants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nb courriers sortants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>