force-app/main/default/objects/Case/fields/NbCritizr__c.field-meta.xml
<CustomField>
    <fullName>NbCritizr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NbCritizr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>