force-app/main/default/objects/Case/fields/NbEInvitationsEnvoyees__c.field-meta.xml
<CustomField>
    <fullName>NbEInvitationsEnvoyees__c</fullName>
    <label>Nombre d’e-invitations envoyées</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>