force-app/main/default/objects/Case/fields/NbEmailsEntrants__c.field-meta.xml
<CustomField>
    <fullName>NbEmailsEntrants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nb Emails Entrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>