force-app/main/default/objects/Case/fields/NbEmailsSortants__c.field-meta.xml
<CustomField>
    <fullName>NbEmailsSortants__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Champ Technique pour calculer le nombre d&#39;emails sortants envoyés sur le ticket.
Champ incrémenté par workflow</description>
    <label>Nb emails Sortants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>