force-app/main/default/objects/Case/fields/NbFacebook__c.field-meta.xml
<CustomField>
    <fullName>NbFacebook__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NbFacebook</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>