force-app/main/default/objects/Case/fields/NbFormulaireContact__c.field-meta.xml
<CustomField>
    <fullName>NbFormulaireContact__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nb Formulaire de Contact</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>