force-app/main/default/objects/Case/fields/NbInvitationChargeesCarte__c.field-meta.xml
<CustomField>
    <fullName>NbInvitationChargeesCarte__c</fullName>
    <description>Champ pour renseigner le nombre d&#39;invitations chargées directement sur la carte de fidélité.</description>
    <label>Nb d&#39;invitations chargées sur la carte</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>