force-app/main/default/objects/Case/fields/NbInvitationsEnvoyees__c.field-meta.xml
<CustomField>
    <fullName>NbInvitationsEnvoyees__c</fullName>
    <label>Nombre d&#39;invitations envoyées</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>