force-app/main/default/objects/Case/fields/NbTwitter__c.field-meta.xml
<CustomField>
    <fullName>NbTwitter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NbTwitter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>