force-app/main/default/objects/Case/fields/NInvitation20__c.field-meta.xml
<CustomField>
    <fullName>NInvitation20__c</fullName>
    <label>N° invitation 20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>