force-app/main/default/objects/Case/fields/NoCarteReservationReference__c.field-meta.xml
<CustomField>
    <fullName>NoCarteReservationReference__c</fullName>
    <label>N° de carte / Réservation / Référence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>