force-app/main/default/objects/Case/fields/NoCarteUI__c.field-meta.xml
<CustomField>
    <fullName>NoCarteUI__c</fullName>
    <description>Champ qui copie le numéro de carte UI de la fiche client</description>
    <formula>Account.NoCarteUI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° Carte UI</label>
    <type>Text</type>
</CustomField>