force-app/main/default/objects/Case/fields/NoCheque__c.field-meta.xml
<CustomField>
    <fullName>NoCheque__c</fullName>
    <label>N° chèque</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>