force-app/main/default/objects/Case/fields/NoInvitation10__c.field-meta.xml
<CustomField>
    <fullName>NoInvitation10__c</fullName>
    <label>N° invitation 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>