force-app/main/default/objects/Case/fields/NoInvitation11__c.field-meta.xml
<CustomField>
    <fullName>NoInvitation11__c</fullName>
    <label>N° invitation 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>