force-app/main/default/objects/Case/fields/NoInvitation12__c.field-meta.xml
<CustomField>
    <fullName>NoInvitation12__c</fullName>
    <label>N° invitation 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>