force-app/main/default/objects/Case/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <description>Champ pour la création d&#39;un ticket par la salle</description>
    <label>Nom</label>
    <length>40</length>
    <type>Text</type>
</CustomField>