force-app/main/default/objects/Case/fields/NombreDeMoisRemise__c.field-meta.xml
<CustomField>
    <fullName>NombreDeMoisRemise__c</fullName>
    <label>Nombre de mois remise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>