force-app/main/default/objects/Case/fields/NomPrenomPayeur__c.field-meta.xml
<CustomField>
    <fullName>NomPrenomPayeur__c</fullName>
    <label>Nom prénom payeur</label>
    <type>TextArea</type>
</CustomField>