force-app/main/default/objects/Case/fields/numerocontrat__c.field-meta.xml
<CustomField>
    <fullName>numerocontrat__c</fullName>
    <formula>Subscription__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>numéro de contrat</label>
    <type>Text</type>
</CustomField>