force-app/main/default/objects/Case/fields/Offre_de_r_tention__c.field-meta.xml
<CustomField>
    <fullName>Offre_de_r_tention__c</fullName>
    <label>Offre de rétention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Points fidélité</fullName>
                <label>Points fidélité (Bronze)</label>
            </value>
            <value>
                <fullName>REMRETARG</fullName>
                <label>1 mois gratuit + bonus (Argent)</label>
            </value>
            <value>
                <fullName>REMRETOR</fullName>
                <label>2 mois gratuits (Or)</label>
            </value>
            <value>
                <fullName>REMRETPLAT</fullName>
                <label>2 mois gratuits + bonus (Platine)</label>
            </value>
            <value>
                <fullName>Hausse tarifaire</fullName>
            </value>
            <value>
                <fullName>1 mois gratuit</fullName>
                <isActive>false</isActive>
                <label>1 mois gratuit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>