force-app/main/default/objects/Case/fields/OffreMoment__c.field-meta.xml
<CustomField>
    <fullName>OffreMoment__c</fullName>
    <formula>Account.OffreMoment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offre du moment</label>
    <type>Text</type>
</CustomField>