force-app/main/default/objects/Case/fields/Offres_commerciales_FR__c.field-meta.xml
<CustomField>
    <fullName>Offres_commerciales_FR__c</fullName>
    <formula>Subscription__r.HermesIntituleOffre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offres commerciales FR</label>
    <type>Text</type>
</CustomField>