force-app/main/default/objects/Case/fields/Offres_commerciales_NL__c.field-meta.xml
<CustomField>
    <fullName>Offres_commerciales_NL__c</fullName>
    <formula>Subscription__r.HermesIntituleOffreNL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offres commerciales NL</label>
    <type>Text</type>
</CustomField>