force-app/main/default/objects/Case/fields/Pallier__c.field-meta.xml
<CustomField>
    <fullName>Pallier__c</fullName>
    <label>Pallier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>100</fullName>
                <isActive>false</isActive>
                <label>100</label>
            </value>
            <value>
                <fullName>200</fullName>
                <isActive>false</isActive>
                <label>200</label>
            </value>
            <value>
                <fullName>50</fullName>
                <isActive>false</isActive>
                <label>50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>