force-app/main/default/objects/Case/fields/PayeurDifferent__c.field-meta.xml
<CustomField>
    <fullName>PayeurDifferent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payeur différent</label>
    <type>Checkbox</type>
</CustomField>