force-app/main/default/objects/Case/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ContactId</field>
            <operation>equals</operation>
            <valueField>Zuora__Payment__c.Zuora__Account__r.PersonContactId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Zuora__Payment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>