force-app/main/default/objects/Case/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <description>Champ qui copie le pays du compte</description>
    <formula>TEXT(Account.Pays__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pays</label>
    <type>Text</type>
</CustomField>