force-app/main/default/objects/Case/fields/PNDBloctelNpaiEmail__c.field-meta.xml
<CustomField>
    <fullName>PNDBloctelNpaiEmail__c</fullName>
    <description>Ce champ copie la valeur du champ de la fiche client afin de l&#39;afficher dans le bandeau du ticket</description>
    <formula>Account.PNDBloctelNpaiEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PND &amp; Bloctel &amp; NPAIEmail</label>
    <type>Text</type>
</CustomField>