force-app/main/default/objects/Case/fields/Prenom_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Prenom_Livraison__c</fullName>
    <description>Champ alimenté automatiquement pour la création d&#39;un ticket Fidélio</description>
    <label>Prénom (livraison)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>