force-app/main/default/objects/Case/fields/PrintStatus__c.field-meta.xml
<CustomField>
    <fullName>PrintStatus__c</fullName>
    <formula>TECH_NBPrintFileTotal__c = TECH_NBPrintFileCompteur__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrintStatus</label>
    <type>Checkbox</type>
</CustomField>