force-app/main/default/objects/Case/fields/Produit1__c.field-meta.xml
<CustomField>
    <fullName>Produit1__c</fullName>
    <description>Champ alimenté automatiquement pour les tickets Fidélio pour renseigner le produit commandé</description>
    <label>Produit 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>