force-app/main/default/objects/Case/fields/Produit1Quantite__c.field-meta.xml
<CustomField>
    <fullName>Produit1Quantite__c</fullName>
    <description>Champ alimenté automatiquement pour la création d&#39;un ticket Fidélio</description>
    <label>Produit 1 : Quantité</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>