force-app/main/default/objects/Case/fields/Produit2__c.field-meta.xml
<CustomField>
    <fullName>Produit2__c</fullName>
    <description>Champ alimenté automatiquement pour les tickets Fidélio pour renseigner le produit commandé</description>
    <label>Produit 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>