force-app/main/default/objects/Case/fields/Produit2Attribue__c.field-meta.xml
<CustomField>
    <fullName>Produit2Attribue__c</fullName>
    <description>Champ alimenté automatiquement pour la création de tickets Fidélio</description>
    <label>Produit 2 : Attribue</label>
    <length>150</length>
    <type>Text</type>
</CustomField>