force-app/main/default/objects/Case/fields/Produits__c.field-meta.xml
<CustomField>
    <fullName>Produits__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produits</label>
    <referenceTo>Produit__c</referenceTo>
    <relationshipLabel>Demandes clients</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>