force-app/main/default/objects/Case/fields/QuestionConcerne__c.field-meta.xml
<CustomField>
    <fullName>QuestionConcerne__c</fullName>
    <description>Champ alimenté par le formulaire de contact depuis le site internet avec la valeur renseignée dans &quot;et qui concerne&quot;</description>
    <label>Question concerne</label>
    <length>50</length>
    <type>Text</type>
</CustomField>