force-app/main/default/objects/Case/fields/R_dition_Gratuite__c.field-meta.xml
<CustomField>
    <fullName>R_dition_Gratuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réédition Gratuite</label>
    <type>Checkbox</type>
</CustomField>