force-app/main/default/objects/Case/fields/R_sultat_R_tention__c.field-meta.xml
<CustomField>
    <fullName>R_sultat_R_tention__c</fullName>
    <label>Résultat Rétention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepté</fullName>
            </value>
            <value>
                <fullName>Refuse avec desabonnement</fullName>
                <label>Refusé avec désabonnement</label>
            </value>
            <value>
                <fullName>Refuse sans desabonnement</fullName>
                <label>Refusé sans désabonnement</label>
            </value>
            <value>
                <fullName>Client indécis</fullName>
            </value>
            <value>
                <fullName>Refuse avec desabonnement E</fullName>
                <isActive>false</isActive>
                <label>Refusé avec désabonnement E</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>